feat: Add API to view filered servers in server administration service
