# server_administration_service/api/routes/server_administration_service_routes.go
@@ -8,6 +8,7 @@ import (
 
 func RegisterRoutes(r *mux.Router, serverHandler handler.ServerHandler) {
 	r.HandleFunc("/server/create", serverHandler.CreateServer).Methods("POST")
+	r.HandleFunc("/server/view", serverHandler.ViewServers).Methods("GET")
 	r.HandleFunc("/server/update", serverHandler.UpdateServer).Methods("PUT")
 	r.HandleFunc("/server/delete", serverHandler.DeleteServer).Methods("DELETE")
 	r.HandleFunc("/server/import", serverHandler.ImportServers).Methods("POST")
